luci-app-mentohust: convert to JS
Signed-off-by: sbwml <admin@cooluc.com>

--- a/luci-app-mentohust/root/usr/share/rpcd/acl.d/luci-app-mentohust.json
+++ b/luci-app-mentohust/root/usr/share/rpcd/acl.d/luci-app-mentohust.json
@@ -2,6 +2,9 @@
 	"luci-app-mentohust": {
 		"description": "Grant UCI access for luci-app-mentohust",
 		"read": {
+			"ubus": {
+				"service": [ "list" ]
+			},
 			"uci": [ "mentohust" ]
 		},
 		"write": {
